<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="ch.hsr.afterhour.gui.RegisterActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/register_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ScrollView
                    android:id="@+id/register_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/register_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:backgroundTint="@color/colorAccent"
                            android:hint="@string/firstname"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:shadowColor="@color/fontColor"
                            android:textColor="@color/fontColor"
                            android:textColorHint="@color/fontColorHint" />

                        <EditText
                            android:id="@+id/register_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:backgroundTint="@color/colorAccent"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@color/fontColor"
                            android:textColorHint="@color/fontColorHint" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:hint="@string/birthday"
                            android:textColorHint="@color/fontColorHint" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/register_birth_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorAccent"
                                android:hint="@string/year"
                                android:inputType="date"
                                android:maxLines="1"
                                android:textColor="@color/fontColor"
                                android:textColorHint="@color/fontColorHint" />

                            <EditText
                                android:id="@+id/register_birth_month"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorAccent"
                                android:hint="@string/month"
                                android:inputType="date"
                                android:maxLines="1"
                                android:textColor="@color/fontColor"
                                android:textColorHint="@color/fontColorHint" />

                            <EditText
                                android:id="@+id/register_birth_day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorAccent"
                                android:hint="@string/day"
                                android:inputType="date"
                                android:maxLines="1"
                                android:textColor="@color/fontColor"
                                android:textColorHint="@color/fontColorHint" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/register_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:backgroundTint="@color/colorAccent"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/fontColor"
                            android:textColorHint="@color/fontColorHint" />

                        <EditText
                            android:id="@+id/register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:backgroundTint="@color/colorAccent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/fontColor"
                            android:textColorHint="@color/fontColorHint" />

                        <EditText
                            android:id="@+id/register_repeat_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:backgroundTint="@color/colorAccent"
                            android:hint="@string/repeat_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/fontColor"
                            android:textColorHint="@color/fontColorHint" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:hint="@string/mobile_number"
                            android:textColorHint="@color/fontColorHint" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/register_vorwahl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="7dp"
                                android:layout_marginTop="3dp"
                                android:backgroundTint="@color/colorAccent"
                                android:hint="@string/dummy_intl_phone"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:textColor="@color/fontColor"
                                android:textColorHint="@color/fontColorHint" />

                            <EditText
                                android:id="@+id/register_mobilenumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:backgroundTint="@color/colorAccent"
                                android:hint="@string/dummy_phone"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:textColor="@color/fontColor"
                                android:textColorHint="@color/fontColorHint" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/register_register_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@color/colorAccent"
                            android:hint="@string/register" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
