...
                        android:background="@color/colorAccent"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/login_register_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:enabled="true"
                        android:text="@string/action_register"
...
